--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">Ali Android Lab</string>
     <string name="hello_message">سلام دنیا!!!</string>
     <string name="button_message">من دکمه هستم</string>
+    <string name="hinttext">متن را وارد کنید</string>
+    <string name="editmessage">متن پیش فزص</string>
 </resources>
