Week6_recycler, my code complete and lab finished.

--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Ali Android Lab</string>
+    <string name="type_password">پسورد</string>
     <string name="hello_message">سلام دنیا!!!</string>
     <string name="button_message">من دکمه هستم</string>
 </resources>
