--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Ali Android Lab</string>
-    <string name="hello_message">Hello World!!!</string>
-    <string name="button_message">I am button</string>
+    <string name="button_message">Login</string>
+    <string name="type_password">Type your password</string>
 </resources>
